Fixed styling error that vertically misaligned all items when matches populate

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,7 +36,7 @@ body{
 }
 
 #app{
-  display: flex;
+  // display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -55,7 +55,7 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 15vh 0; 
+  margin: 15vh auto; 
 
   h1{
     font-family: 'Open Sans', italic;
